Add printer, improve app initialisation

--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "babel-loader": "6.3.2",
     "babel-polyfill": "6.23.0",
     "babel-preset-latest": "6.22.0",
+    "bluebird": "^3.5.0",
+    "bluebird-retry": "^0.11.0",
     "clean-webpack-plugin": "0.1.15",
     "config": "^1.26.2",
     "copy-webpack-plugin": "4.0.1",
     "cross-env": "3.1.4",
     "css-loader": "0.26.1",
     "debug": "^3.0.0",
+    "escpos": "^2.4.3",
+    "escpos-print": "^1.1.1",
     "eslint": "3.15.0",
     "eslint-loader": "1.6.1",
     "express": "4.14.1",
@@ -47,7 +51,7 @@
     "pixi-filters": "^2.0.0",
     "pixi.js": "4.3.5",
     "raf": "3.3.0",
-    "serialport": "^5.0.0",
+    "serialport": "^4.0.7",
     "slash": "1.0.0",
     "style-loader": "0.13.1",
     "texture-atlas": "0.2.1",
