--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "texture-atlas": "0.2.1",
     "walk": "2.3.9",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "2.3.0",
+    "word-wrap": "^1.2.3"
   },
   "engines": {
     "node": "7.5.0"
