--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "private-build-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
     "private-lint-root": "eslint *.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --content-base dist/",
-    "server-dev": "cross-env NODE_ENV=development DEBUG=\"histoirotron:*\" node index.js",
     "build-dev": "npm-run-all private-lint-root private-build-dev",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "serve": "cross-env NODE_ENV=production DEBUG=\"histoirotron:*\" node index.js",
@@ -24,6 +23,7 @@
   },
   "homepage": "https://github.com/risq/histoirotron.git#readme",
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "axios": "0.15.3",
     "babel-core": "6.23.1",
     "babel-loader": "6.3.2",
@@ -53,6 +53,8 @@
     "raf": "3.3.0",
     "serialport": "^4.0.7",
     "slash": "1.0.0",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "style-loader": "0.13.1",
     "texture-atlas": "0.2.1",
     "walk": "2.3.9",
