--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "pixi-filters": "^2.0.0",
     "pixi.js": "4.3.5",
     "raf": "3.3.0",
+    "request-promise": "^4.2.1",
     "serialport": "^4.0.7",
     "slash": "1.0.0",
     "socket.io": "^2.0.3",
